// Vitest Snapshot v1

exports[`<CacheParameters /> > should rander when [hash=null] 1`] = `
<BoxGroup>
  <BoxGroupHeader>
    Trim Parameters
  </BoxGroupHeader>
  <Table>
    <tbody />
  </Table>
</BoxGroup>
`;

exports[`<CacheParameters /> > should render 1`] = `
<BoxGroup>
  <BoxGroupHeader>
    Trim Parameters
  </BoxGroupHeader>
  <Table>
    <tbody>
      <tr
        key="0"
      >
        <styled.th>
          0
        </styled.th>
        <td>
          f
        </td>
      </tr>
      <tr
        key="1"
      >
        <styled.th>
          1
        </styled.th>
        <td>
          o
        </td>
      </tr>
      <tr
        key="2"
      >
        <styled.th>
          2
        </styled.th>
        <td>
          o
        </td>
      </tr>
    </tbody>
  </Table>
</BoxGroup>
`;
